src/test/deca/syntax/valid/provided/class/test_new.deca
class A {}
{
int x = new A();
}
