src/test/deca/syntax/invalid/provided/parentheses.deca
//test des parentheses
{
float x = (5));
}